--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+/* = TODO
+ * . Code block - use --root-hue for background color.
+ * . Quote block - style with quotes similarly to asciidoc default.
+ * ** `+.quoteblock blockquote::before {}+`
+ */
 @import url('https://fonts.googleapis.com/css2?family=Lexend&display=swap');
 
 * {
-  overflow-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 :root {
