style.css: TODO points.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
  * . Code block - use --root-hue for background color.
  * . Quote block - style with quotes similarly to asciidoc default.
  * ** `+.quoteblock blockquote::before {}+`
+ * . Verbatim looks awful.
+ * . There should be a space before (above) the figure name.
  */
 @import url('https://fonts.googleapis.com/css2?family=Lexend&display=swap');
 
